bluegreen-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bluegreen-service
  namespace: development
spec:
  selector:
    app: bluegreen
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
